--- a/protocols/Telegram/Telegram.vcxproj
+++ b/protocols/Telegram/Telegram.vcxproj
@@ -26,6 +26,8 @@
     <Import Project="$(ProjectDir)..\..\build\vc.common\plugin.props" />
   </ImportGroup>
   <ItemGroup>
+    <ClCompile Include="src\main.cpp" />
+    <ClCompile Include="src\mt_proto.cpp" />
     <ClCompile Include="src\stdafx.cxx">
       <PrecompiledHeader>Create</PrecompiledHeader>
     </ClCompile>
@@ -37,5 +39,11 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <Image Include="telegram.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="src\mt_proto.h" />
+    <ClInclude Include="src\resource.h" />
+    <ClInclude Include="src\stdafx.h" />
+    <ClInclude Include="src\version.h" />
   </ItemGroup>
 </Project>
